@@ -94,19 +94,27 @@ namespace Mono.Tuner {
 
 		static void ProcessMethod (MethodDefinition method)
 		{
-			if (!method.IsPublic)
-				return;
-
 			if (IsMarkedAsPublic (method))
 				return;
 
-			SetInternalVisibility (method);
+			if (method.IsPublic)
+				SetInternalVisibility (method);
+			else if (method.IsFamily || method.IsFamilyOrAssembly)
+				SetProtectedAndInternalVisibility (method);
 		}
 
 		static void SetInternalVisibility (MethodDefinition method)
 		{
 			method.Attributes &= ~MethodAttributes.MemberAccessMask;
 			method.Attributes |= MethodAttributes.Assem;
+
+			TunerAnnotations.Internalized (method);
+		}
+
+		static void SetProtectedAndInternalVisibility (MethodDefinition method)
+		{
+			method.Attributes &= ~MethodAttributes.MemberAccessMask;
+			method.Attributes |= MethodAttributes.FamANDAssem;
 
 			TunerAnnotations.Internalized (method);
 		}
@@ -124,19 +132,27 @@ namespace Mono.Tuner {
 
 		static void ProcessField (FieldDefinition field)
 		{
-			if (!field.IsPublic)
-				return;
-
 			if (IsMarkedAsPublic (field))
 				return;
 
-			SetInternalVisibility (field);
+			if (field.IsPublic)
+				SetInternalVisibility (field);
+			else if (field.IsFamily || field.IsFamilyOrAssembly)
+				SetProtectedAndInternalVisibility (field);
 		}
 
 		static void SetInternalVisibility (FieldDefinition field)
 		{
 			field.Attributes &= ~FieldAttributes.FieldAccessMask;
 			field.Attributes |= FieldAttributes.Assembly;
+
+			TunerAnnotations.Internalized (field);
+		}
+
+		static void SetProtectedAndInternalVisibility (FieldDefinition field)
+		{
+			field.Attributes &= ~FieldAttributes.FieldAccessMask;
+			field.Attributes |= FieldAttributes.FamANDAssem;
 
 			TunerAnnotations.Internalized (field);
 		}
